chore: new translations apps-journeys-admin.json Chinese Traditional

--- a/libs/locales/zh-TW/apps-journeys-admin.json
+++ b/libs/locales/zh-TW/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s |",
   "Admin | Next Steps": "管理員 |",
+  "Email Preferences Updated.": "Email Preferences Updated.",
+  "Email Preferences": "Email Preferences",
+  "Select the types of email notifications you want to receive from NextSteps.": "Select the types of email notifications you want to receive from NextSteps.",
+  "Account Notifications": "Account Notifications",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.",
+  "Done": "完畢",
+  "Feedback & Support": "回饋",
   "Journeys": "旅程",
   "Create a New Journey": "開創新征程",
   "Request Access": "申請進入",
@@ -26,6 +33,17 @@
   "Sign In": "登入",
   "Terms and Conditions": "條款與條件",
   "A question about the terms and conditions form": "關於條款和條件表格的問題",
+  "Required": "必需的",
+  "Validate NextStep Email": "Validate NextStep Email",
+  "Verify Your Email": "Verify Your Email",
+  "To start making NextSteps journeys": "To start making NextSteps journeys",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.",
+  "Resend Validation Email": "Resend Validation Email",
+  "Verify With Code Instead": "Verify With Code Instead",
+  "Enter verification code from email": "Enter verification code from email",
+  "Code": "Code",
+  "Validate Email": "Validate Email",
+  "Logout": "Logout",
   "Manage Access": "Manage Access",
   "You can't edit this journey": "您無法編輯此旅程",
   "Send an access request to the creator of this journey": "向此旅程的創建者發送訪問請求",
@@ -48,9 +66,8 @@
   "Editor invite link copied": "編輯者邀請連結已複製",
   "Users invited by link will request approval.": "透過連結邀請的用戶將請求批准。",
   "Please enter a valid email address": "請輸入有效的電子郵件地址",
-  "Required": "必需的",
   "This email is already on the list": "該電子郵件已在清單中",
-  "No email notifications. New users get access instantly.": "沒有電子郵件通知。",
+  "New users get access instantly.": "New users get access instantly.",
   "Approve": "核准",
   "Promote": "推動",
   "Remove": "消除",
@@ -300,7 +317,6 @@
   "Blocks": "積木",
   "Add": "添加",
   "Edit": "編輯",
-  "Done": "完畢",
   "Character limit reached": "Character limit reached",
   "Description": "描述",
   "Recommended length: up to 18 words": "Recommended length: up to 18 words",
@@ -435,6 +451,9 @@
   "No Results Found": "No Results Found",
   "No More Videos": "No More Videos",
   "Search by title in JF Library": "Search by title in JF Library",
+  "Please verify your email": "Please verify your email",
+  "You need to verify your email before you can continue.": "You need to verify your email before you can continue.",
+  "Send verification email": "Send verification email",
   "Journeys Archived": "旅程存檔",
   "Journeys Trashed": "旅程被毀",
   "No journeys to display.": "沒有可顯示的行程。",
@@ -512,11 +531,13 @@
   "0 min": "0分鐘",
   "sec": "秒",
   "min": "分分鐘",
+  "Change Language": "Change Language",
+  "Revert": "Revert",
+  "Are you sure you want to change language?": "Are you sure you want to change language?",
   "Reports": "報告",
   "See all": "看全部",
   "Help us serve you better": "幫助我們更好地為您服務",
   "Next": "下一個",
-  "Feedback & Support": "回饋",
   "Create Custom Journey": "創建客製化旅程",
   "Template": "範本",
   "Use Template": "使用模板",
@@ -531,7 +552,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "在冒充使用者之前，您必須獲得使用者的許可。",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "模擬會話持續一小時。",
   "User Email Address": "使用者電子郵件地址",
-  "Logout": "Logout",
   "Logout successful": "註銷成功",
   "New Editing Request": "新的編輯請求",
   "New Journey": "新旅程",
@@ -584,7 +604,7 @@
   "Change Team Name": "更改團隊名稱",
   "Save": "節省",
   "Only a manager can invite new members to the team": "只有經理可以邀請新成員加入團隊",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "沒有電子郵件通知。",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>旅程模板</0><1>在</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "主題、假期、感受到的需求、收藏",
   "Audience": "觀眾",
