--- a/libs/locales/ja-JP/apps-journeys-admin.json
+++ b/libs/locales/ja-JP/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s | 次のステップ",
   "Admin | Next Steps": "管理者｜次のステップ",
+  "Email Preferences Updated.": "Eメール設定を更新しました。",
+  "Email Preferences": "メール設定",
+  "Select the types of email notifications you want to receive from NextSteps.": "NextStepsから受け取りたいEメール通知の種類を選択します。",
+  "Account Notifications": "アカウント通知",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "チームへの新メンバー、チームへの招待、ジャーニーの共有、ジャーニーへのアクセスリクエスト、チームからの脱退に関する最新情報をメールでお知らせします。",
+  "Done": "完了",
+  "Feedback & Support": "フィードバック＆サポート",
   "Journeys": "旅",
   "Create a New Journey": "新しい旅を創造する",
   "Request Access": "アクセスをリクエストする",
@@ -26,6 +33,17 @@
   "Sign In": "サインイン",
   "Terms and Conditions": "ご利用条件",
   "A question about the terms and conditions form": "契約条件書に関する質問",
+  "Required": "必須",
+  "Validate NextStep Email": "NextStepメールの検証",
+  "Verify Your Email": "Eメールの確認",
+  "To start making NextSteps journeys": "NextStepsの旅を始めるには",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "あなたのアカウントを確認するためのリンクを含む電子メールがこのアドレスに送信されました。数分経ってもメールが届かない場合は、迷惑メールフォルダをご確認ください。",
+  "Resend Validation Email": "バリデーションメールの再送",
+  "Verify With Code Instead": "代わりにコードで検証する",
+  "Enter verification code from email": "メールに記載された認証コードを入力",
+  "Code": "コード",
+  "Validate Email": "電子メールの検証",
+  "Logout": "ログアウト",
   "Manage Access": "アクセス管理",
   "You can't edit this journey": "この旅は編集できません",
   "Send an access request to the creator of this journey": "この旅の作成者にアクセスリクエストを送信する",
@@ -48,9 +66,8 @@
   "Editor invite link copied": "編集部招待リンクをコピー",
   "Users invited by link will request approval.": "リンクによって招待されたユーザーは、承認を要求します。",
   "Please enter a valid email address": "有効なEメールアドレスを入力してください。",
-  "Required": "必須",
   "This email is already on the list": "このメールはすでにリストに掲載されています",
-  "No email notifications. New users get access instantly.": "Eメールによる通知はありません。新規ユーザーはすぐにアクセスできます。",
+  "New users get access instantly.": "新規ユーザーはすぐにアクセスできる。",
   "Approve": "承認",
   "Promote": "プロモーション",
   "Remove": "削除",
@@ -300,7 +317,6 @@
   "Blocks": "ブロック",
   "Add": "追加",
   "Edit": "編集",
-  "Done": "完了",
   "Character limit reached": "文字数制限に達した",
   "Description": "説明",
   "Recommended length: up to 18 words": "推奨される長さ：18ワードまで",
@@ -435,6 +451,9 @@
   "No Results Found": "結果が見つかりません",
   "No More Videos": "ノーモア・ビデオ",
   "Search by title in JF Library": "JFライブラリーのタイトルで検索",
+  "Please verify your email": "Eメールを確認してください",
+  "You need to verify your email before you can continue.": "続行する前にEメールを確認する必要があります。",
+  "Send verification email": "認証メールを送信する",
   "Journeys Archived": "ジャーニー アーカイブ",
   "Journeys Trashed": "ジャーニー・トラッシュド",
   "No journeys to display.": "表示する旅はない。",
@@ -512,11 +531,13 @@
   "0 min": "0分",
   "sec": "秒",
   "min": "分",
+  "Change Language": "言語の変更",
+  "Revert": "復帰",
+  "Are you sure you want to change language?": "本当に言語を変更したいのですか？",
   "Reports": "レポート",
   "See all": "すべて見る",
   "Help us serve you better": "より良いサービスを提供するために",
   "Next": "次のページ",
-  "Feedback & Support": "フィードバック＆サポート",
   "Create Custom Journey": "カスタム・ジャーニーの作成",
   "Template": "テンプレート",
   "Use Template": "テンプレート使用",
@@ -531,7 +552,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "ユーザーになりすます前に、必ず本人の許可を得てください。ユーザーのデータへの不正アクセスは、法律によっては違法となり処罰される場合があります。",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "なりすましセッションは1時間。ただし、早急に相手のアカウントからサインアウトしてください。",
   "User Email Address": "ユーザーメールアドレス",
-  "Logout": "ログアウト",
   "Logout successful": "ログアウト成功",
   "New Editing Request": "新規編集リクエスト",
   "New Journey": "新しい旅",
@@ -584,7 +604,7 @@
   "Change Team Name": "チーム名の変更",
   "Save": "セーブ",
   "Only a manager can invite new members to the team": "マネージャーだけが新しいメンバーをチームに招待できる",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Eメールでのお知らせはありません。新しいメンバーはすぐにアクセスできます。チームメンバーはすべてのアナリティクスを見ることができ、あらゆるジャーニーを編集し、ジャーニーを削除、コピーすることができます。",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "新規メンバーはすぐにアクセスできます。チームメンバーはすべてのアナリティクスを見たり、ジャーニーを編集したり、ジャーニーを削除したりコピーしたりすることができます。",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>旅のテンプレート</0><1>で</1><2>{{firstLanguage}} {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "トピック, ホリデー, フェルト・ニーズ, コレクション",
   "Audience": "観客",
