chore: new translations apps-journeys-admin.json Turkish

--- a/libs/locales/tr-TR/apps-journeys-admin.json
+++ b/libs/locales/tr-TR/apps-journeys-admin.json
@@ -1,6 +1,13 @@
 {
   "%s | Next Steps": "%s | Sonraki Adımlar",
   "Admin | Next Steps": "Yönetici | Sonraki Adımlar",
+  "Email Preferences Updated.": "E-posta Tercihleri Güncellendi.",
+  "Email Preferences": "E-posta Tercihleri",
+  "Select the types of email notifications you want to receive from NextSteps.": "NextSteps'ten almak istediğiniz e-posta bildirimlerinin türlerini seçin.",
+  "Account Notifications": "Hesap Bildirimleri",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Ekiplerinize yeni üyeler, bir ekibe davet edilenler, sizinle paylaşılan yolculuklar, yolculuk erişim talepleri ve bir ekipten çıkarılanlar hakkında e-posta güncellemeleri.",
+  "Done": "Bitti",
+  "Feedback & Support": "Geri Bildirim ve Destek",
   "Journeys": "Yolculuklar",
   "Create a New Journey": "Yeni Bir Yolculuk Yaratın",
   "Request Access": "Erişim Talebi",
@@ -26,6 +33,17 @@
   "Sign In": "Oturum Aç",
   "Terms and Conditions": "Şartlar ve Koşullar",
   "A question about the terms and conditions form": "Şartlar ve koşullar formu hakkında bir soru",
+  "Required": "Gerekli",
+  "Validate NextStep Email": "NextStep E-postasını Doğrulama",
+  "Verify Your Email": "E-postanızı Doğrulayın",
+  "To start making NextSteps journeys": "NextSteps yolculukları yapmaya başlamak için",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Bu adrese hesabınızı doğrulamak için bir bağlantı içeren e-posta gönderildi. Birkaç dakika sonra e-postayı almadıysanız, lütfen spam klasörünüzü kontrol edin.",
+  "Resend Validation Email": "Doğrulama E-postasını Yeniden Gönder",
+  "Verify With Code Instead": "Bunun Yerine Kod ile Doğrulayın",
+  "Enter verification code from email": "E-postadaki doğrulama kodunu girin",
+  "Code": "Kod",
+  "Validate Email": "E-posta Doğrulama",
+  "Logout": "Oturumu Kapat",
   "Manage Access": "Erişimi Yönet",
   "You can't edit this journey": "Bu yolculuğu düzenleyemezsiniz",
   "Send an access request to the creator of this journey": "Bu yolculuğun yaratıcısına bir erişim isteği gönderin",
@@ -48,9 +66,8 @@
   "Editor invite link copied": "Editör davet bağlantısı kopyalandı",
   "Users invited by link will request approval.": "Bağlantı ile davet edilen kullanıcılar onay isteyecektir.",
   "Please enter a valid email address": "Lütfen geçerli bir e-posta adresi girin",
-  "Required": "Gerekli",
   "This email is already on the list": "Bu e-posta zaten listede",
-  "No email notifications. New users get access instantly.": "E-posta bildirimi yok. Yeni kullanıcılar anında erişim elde eder.",
+  "New users get access instantly.": "Yeni kullanıcılar anında erişim elde eder.",
   "Approve": "Onaylamak",
   "Promote": "Teşvik etmek",
   "Remove": "Kaldırmak",
@@ -300,7 +317,6 @@
   "Blocks": "Bloklar",
   "Add": "Ekle",
   "Edit": "Düzenle",
-  "Done": "Bitti",
   "Character limit reached": "Karakter sınırına ulaşıldı",
   "Description": "Açıklama",
   "Recommended length: up to 18 words": "Önerilen uzunluk: 18 kelimeye kadar",
@@ -435,6 +451,9 @@
   "No Results Found": "Sonuç Bulunamadı",
   "No More Videos": "Başka Video Yok",
   "Search by title in JF Library": "JF Library'de başlığa göre arama yapın",
+  "Please verify your email": "Lütfen e-postanızı doğrulayın",
+  "You need to verify your email before you can continue.": "Devam edebilmeniz için e-postanızı doğrulamanız gerekmektedir.",
+  "Send verification email": "Doğrulama e-postası gönder",
   "Journeys Archived": "Yolculuklar Arşivlendi",
   "Journeys Trashed": "Çöpe Atılan Yolculuklar",
   "No journeys to display.": "Gösterilecek yolculuk yok.",
@@ -512,11 +531,13 @@
   "0 min": "0 dakika",
   "sec": "sn",
   "min": "min",
+  "Change Language": "Dil Değiştir",
+  "Revert": "Geri Dön",
+  "Are you sure you want to change language?": "Dili değiştirmek istediğinizden emin misiniz?",
   "Reports": "Raporlar",
   "See all": "Tümünü görün",
   "Help us serve you better": "Size daha iyi hizmet vermemize yardımcı olun",
   "Next": "Sonraki",
-  "Feedback & Support": "Geri Bildirim ve Destek",
   "Create Custom Journey": "Özel Yolculuk Oluşturun",
   "Template": "Şablon",
   "Use Template": "Şablon Kullan",
@@ -531,7 +552,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "Kullanıcıyı taklit etmeden önce ondan izin almalısınız. Bir kullanıcının verilerine izinsiz erişim yasadışı olabilir ve bazı hukuk sistemlerinde kanunen cezalandırılabilir.",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Taklit oturumları bir saat sürer. Ancak, hesaplarından en kısa sürede çıkış yapmalısınız.",
   "User Email Address": "Kullanıcı E-posta Adresi",
-  "Logout": "Oturumu Kapat",
   "Logout successful": "Çıkış başarılı",
   "New Editing Request": "Yeni Düzenleme Talebi",
   "New Journey": "Yeni Yolculuk",
@@ -584,7 +604,7 @@
   "Change Team Name": "Takım Adını Değiştir",
   "Save": "Kaydet",
   "Only a manager can invite new members to the team": "Sadece bir yönetici ekibe yeni üyeler davet edebilir",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "E-posta bildirimi yok. Yeni üyeler anında erişim elde eder. Ekip üyeleri tüm analizleri görebilir, herhangi bir yolculuğu düzenleyebilir, yolculuğu silebilir ve kopyalayabilir.",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Yeni üyeler anında erişim elde eder. Ekip üyeleri tüm analizleri görebilir, herhangi bir yolculuğu düzenleyebilir, yolculuğu silebilir ve kopyalayabilir.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Yolculuk Şablonları</0><1>içinde</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "Konular, tatiller, keçe ihtiyaçları, koleksiyonlar",
   "Audience": "İzleyici",
