chore: new translations apps-journeys-admin.json Russian

--- a/libs/locales/ru-RU/apps-journeys-admin.json
+++ b/libs/locales/ru-RU/apps-journeys-admin.json
@@ -1,6 +1,12 @@
 {
   "%s | Next Steps": "%s | ",
   "Admin | Next Steps": "Админ | ",
+  "Email Preferences Updated.": "Обновлены настройки электронной почты.",
+  "Email Preferences": "Предпочтения электронной почты",
+  "Select the types of email notifications you want to receive from NextSteps.": "Выбери типы уведомлений по электронной почте, которые ты хочешь получать от NextSteps.",
+  "Account Notifications": "Уведомления о счетах",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Отправляй по электронной почте сообщения о новых участниках твоих команд, приглашенных в команду, о том, что с тобой поделились путешествием, о запросах на доступ к путешествию и об удалении из команды.",
+  "Done": "Сделанный",
   "Journeys": "Путешествия",
   "Create a New Journey": "Создать новое путешествие",
   "Request Access": "Запрос доступа",
@@ -26,6 +32,17 @@
   "Sign In": "Войти",
   "Terms and Conditions": "Условия и положения",
   "A question about the terms and conditions form": "Вопрос об условиях формы",
+  "Required": "Необходимый",
+  "Validate NextStep Email": "Проверь электронную почту NextStep",
+  "Verify Your Email": "Проверь свою электронную почту",
+  "To start making NextSteps journeys": "Чтобы начать совершать путешествия NextSteps",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "На этот адрес было отправлено письмо со ссылкой для проверки твоего аккаунта. Если через несколько минут ты не получил письмо, проверь папку со спамом.",
+  "Resend Validation Email": "Повторная отправка письма с подтверждением",
+  "Verify With Code Instead": "Проверяй с помощью кода",
+  "Enter verification code from email": "Введите проверочный код из электронной почты",
+  "Code": "Код",
+  "Validate Email": "Проверь электронную почту",
+  "Logout": "Выход из системы",
   "Manage Access": "Управляй доступом",
   "You can't edit this journey": "Вы не можете редактировать это путешествие.",
   "Send an access request to the creator of this journey": "Отправьте запрос на доступ автору этого путешествия",
@@ -48,9 +65,8 @@
   "Editor invite link copied": "Ссылка для приглашения редактора скопирована.",
   "Users invited by link will request approval.": "Пользователи, приглашенные по ссылке, запросят одобрение.",
   "Please enter a valid email address": "Пожалуйста, введите действительный адрес электронной почты",
-  "Required": "Необходимый",
   "This email is already on the list": "Этот адрес электронной почты уже есть в списке",
-  "No email notifications. New users get access instantly.": "Никаких уведомлений по электронной почте. ",
+  "New users get access instantly.": "Новые пользователи получают доступ мгновенно.",
   "Approve": "Утвердить",
   "Promote": "Продвигать",
   "Remove": "Удалять",
@@ -300,7 +316,6 @@
   "Blocks": "Блоки",
   "Add": "Добавлять",
   "Edit": "Редактировать",
-  "Done": "Сделанный",
   "Character limit reached": "Лимит символов достигнут",
   "Description": "Описание",
   "Recommended length: up to 18 words": "Рекомендуемая длина: до 18 слов",
@@ -435,6 +450,9 @@
   "No Results Found": "Результаты не найдены",
   "No More Videos": "Больше никаких видео",
   "Search by title in JF Library": "Поиск по названию в библиотеке JF",
+  "Please verify your email": "Пожалуйста, проверь свою электронную почту",
+  "You need to verify your email before you can continue.": "Прежде чем продолжить, тебе нужно подтвердить свою электронную почту.",
+  "Send verification email": "Отправь письмо с подтверждением",
   "Journeys Archived": "Путешествия в архиве",
   "Journeys Trashed": "Путешествия уничтожены",
   "No journeys to display.": "Нет поездок для отображения.",
@@ -512,6 +530,9 @@
   "0 min": "0 мин",
   "sec": "сек",
   "min": "мин",
+  "Change Language": "Изменить язык",
+  "Revert": "Реверс",
+  "Are you sure you want to change language?": "Ты уверен, что хочешь сменить язык?",
   "Reports": "Отчеты",
   "See all": "Увидеть все",
   "Help us serve you better": "Помогите нам лучше обслуживать вас",
@@ -531,7 +552,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "Вы должны получить разрешение от пользователя, прежде чем выдавать себя за него. ",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Сеансы олицетворения длятся один час. ",
   "User Email Address": "Адрес электронной почты пользователя",
-  "Logout": "Выход из системы",
   "Logout successful": "Выход выполнен успешно",
   "New Editing Request": "Новый запрос на редактирование",
   "New Journey": "Новое путешествие",
@@ -584,7 +604,7 @@
   "Change Team Name": "Изменить название команды",
   "Save": "Сохранять",
   "Only a manager can invite new members to the team": "Только менеджер может приглашать новых участников в команду.",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Никаких уведомлений по электронной почте. ",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Новые участники получают доступ мгновенно. Члены команды могут видеть всю аналитику, редактировать любое путешествие, удалять и копировать его.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Шаблоны путешествий</0><1>в</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "Темы, праздники, фетровые потребности, коллекции",
   "Audience": "Аудитория",
