chore: new translations apps-journeys-admin.json French

--- a/libs/locales/fr-FR/apps-journeys-admin.json
+++ b/libs/locales/fr-FR/apps-journeys-admin.json
@@ -1,6 +1,12 @@
 {
   "%s | Next Steps": "%s | Les prochaines étapes",
   "Admin | Next Steps": "Admin | Prochaines étapes",
+  "Email Preferences Updated.": "Préférences de messagerie mises à jour.",
+  "Email Preferences": "Préférences de courrier électronique",
+  "Select the types of email notifications you want to receive from NextSteps.": "Sélectionne les types de notifications par courriel que tu veux recevoir de NextSteps.",
+  "Account Notifications": "Notifications de compte",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Mets-toi au courant par courriel des nouveaux membres de tes équipes, des personnes invitées dans une équipe, des voyages partagés avec toi, des demandes d'accès aux voyages et des personnes retirées d'une équipe.",
+  "Done": "Fait",
   "Journeys": "Voyages",
   "Create a New Journey": "Crée un nouveau voyage",
   "Request Access": "Demande d'accès",
@@ -26,6 +32,17 @@
   "Sign In": "S'inscrire",
   "Terms and Conditions": "Conditions générales d'utilisation",
   "A question about the terms and conditions form": "Une question sur le formulaire des conditions générales",
+  "Required": "Exigée",
+  "Validate NextStep Email": "Valider le courriel de NextStep",
+  "Verify Your Email": "Vérifie ton courriel",
+  "To start making NextSteps journeys": "Pour commencer à faire des voyages NextSteps",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Un courriel a été envoyé à cette adresse avec un lien pour vérifier ton compte. Si tu n'as pas reçu l'email après quelques minutes, vérifie ton dossier spam.",
+  "Resend Validation Email": "Renvoyer le courriel de validation",
+  "Verify With Code Instead": "Vérifie plutôt avec le code",
+  "Enter verification code from email": "Saisis le code de vérification figurant dans l'e-mail",
+  "Code": "Code",
+  "Validate Email": "Valider l'e-mail",
+  "Logout": "Déconnexion",
   "Manage Access": "Gérer l'accès",
   "You can't edit this journey": "Tu ne peux pas modifier ce voyage",
   "Send an access request to the creator of this journey": "Envoie une demande d'accès au créateur de ce voyage.",
@@ -48,9 +65,8 @@
   "Editor invite link copied": "Le lien de l'invitation de l'éditeur a été copié",
   "Users invited by link will request approval.": "Les utilisateurs invités par un lien demanderont une approbation.",
   "Please enter a valid email address": "Saisis une adresse électronique valide",
-  "Required": "Exigée",
   "This email is already on the list": "Cet email est déjà sur la liste",
-  "No email notifications. New users get access instantly.": "Pas de notifications par e-mail. Les nouveaux utilisateurs ont un accès instantané.",
+  "New users get access instantly.": "Les nouveaux utilisateurs y ont accès instantanément.",
   "Approve": "Approuver",
   "Promote": "Promouvoir",
   "Remove": "Enlever",
@@ -300,7 +316,6 @@
   "Blocks": "Blocs",
   "Add": "Ajouter",
   "Edit": "Éditer",
-  "Done": "Fait",
   "Character limit reached": "Limite de caractères atteinte",
   "Description": "Description",
   "Recommended length: up to 18 words": "Longueur recommandée : jusqu'à 18 mots",
@@ -435,6 +450,9 @@
   "No Results Found": "Aucun résultat trouvé",
   "No More Videos": "Plus de vidéos",
   "Search by title in JF Library": "Recherche par titre dans la bibliothèque JF",
+  "Please verify your email": "Vérifie ton e-mail, s'il te plaît",
+  "You need to verify your email before you can continue.": "Tu dois vérifier ton email avant de pouvoir continuer.",
+  "Send verification email": "Envoyer un courriel de vérification",
   "Journeys Archived": "Voyages archivés",
   "Journeys Trashed": "Les voyages à la poubelle",
   "No journeys to display.": "Aucun voyage à afficher.",
@@ -512,6 +530,9 @@
   "0 min": "0 min",
   "sec": "sec",
   "min": "min",
+  "Change Language": "Changer de langue",
+  "Revert": "Revenir en arrière",
+  "Are you sure you want to change language?": "Es-tu sûr de vouloir changer de langue ?",
   "Reports": "Rapports",
   "See all": "Voir tous",
   "Help us serve you better": "Aide-nous à mieux te servir",
@@ -531,7 +552,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "Tu dois obtenir la permission de l'utilisateur avant de te faire passer pour lui. L'accès non autorisé aux données d'un utilisateur peut être illégal et puni par la loi dans certaines juridictions.",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Les sessions d'usurpation d'identité durent une heure. Cependant, tu dois te déconnecter de leur compte dès que possible.",
   "User Email Address": "Adresse électronique de l'utilisateur",
-  "Logout": "Déconnexion",
   "Logout successful": "Déconnexion réussie",
   "New Editing Request": "Nouvelle demande d'édition",
   "New Journey": "Nouveau voyage",
@@ -584,7 +604,7 @@
   "Change Team Name": "Changer le nom de l'équipe",
   "Save": "Sauvegarde",
   "Only a manager can invite new members to the team": "Seul un responsable peut inviter de nouveaux membres dans l'équipe.",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Pas de notifications par e-mail. Les nouveaux membres ont un accès instantané. Les membres de l'équipe peuvent voir toutes les analyses, modifier n'importe quel trajet, et supprimer et copier des trajets.",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Les nouveaux membres y ont accès instantanément. Les membres de l'équipe peuvent voir toutes les analyses, modifier n'importe quel trajet, et supprimer et copier des trajets.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Modèles de voyage</0><1>en</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "Thèmes, vacances, besoins ressentis, collections",
   "Audience": "Audience",
