--- a/libs/locales/es-ES/apps-journeys-admin.json
+++ b/libs/locales/es-ES/apps-journeys-admin.json
@@ -1,6 +1,12 @@
 {
   "%s | Next Steps": "%s | Próximos pasos",
   "Admin | Next Steps": "Admin | Próximos pasos",
+  "Email Preferences Updated.": "Preferencias de correo electrónico Actualizadas.",
+  "Email Preferences": "Preferencias de correo electrónico",
+  "Select the types of email notifications you want to receive from NextSteps.": "Selecciona los tipos de notificaciones por correo electrónico que deseas recibir de NextSteps.",
+  "Account Notifications": "Notificaciones de la cuenta",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Actualiza por correo electrónico los nuevos miembros de tus equipos, los invitados a un equipo, los trayectos compartidos contigo, las solicitudes de acceso a trayectos y los eliminados de un equipo.",
+  "Done": "Hecho",
   "Journeys": "Viajes",
   "Create a New Journey": "Crea un nuevo viaje",
   "Request Access": "Solicitar acceso",
@@ -26,6 +32,17 @@
   "Sign In": "Regístrate",
   "Terms and Conditions": "Términos y condiciones",
   "A question about the terms and conditions form": "Una pregunta sobre el formulario de términos y condiciones",
+  "Required": "Necesario",
+  "Validate NextStep Email": "Validar correo electrónico de NextStep",
+  "Verify Your Email": "Verifica tu correo electrónico",
+  "To start making NextSteps journeys": "Para empezar a hacer viajes NextSteps",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Se ha enviado un correo electrónico a esta dirección con un enlace para verificar tu cuenta. Si no has recibido el correo electrónico después de unos minutos, comprueba tu carpeta de correo no deseado.",
+  "Resend Validation Email": "Reenviar correo de validación",
+  "Verify With Code Instead": "Verifica con el código",
+  "Enter verification code from email": "Introduce el código de verificación del correo electrónico",
+  "Code": "Código",
+  "Validate Email": "Validar correo electrónico",
+  "Logout": "Cerrar sesión",
   "Manage Access": "Gestionar el acceso",
   "You can't edit this journey": "No puedes editar este viaje",
   "Send an access request to the creator of this journey": "Enviar una solicitud de acceso al creador de este viaje",
@@ -48,9 +65,8 @@
   "Editor invite link copied": "Enlace de invitación al editor copiado",
   "Users invited by link will request approval.": "Los usuarios invitados por enlace solicitarán aprobación.",
   "Please enter a valid email address": "Introduce una dirección de correo electrónico válida",
-  "Required": "Necesario",
   "This email is already on the list": "Este correo electrónico ya está en la lista",
-  "No email notifications. New users get access instantly.": "Sin notificaciones por correo electrónico. Los nuevos usuarios obtienen acceso instantáneamente.",
+  "New users get access instantly.": "Los nuevos usuarios obtienen acceso instantáneamente.",
   "Approve": "Aprueba",
   "Promote": "Promueve",
   "Remove": "Elimina",
@@ -300,7 +316,6 @@
   "Blocks": "Bloquea",
   "Add": "Añade",
   "Edit": "Edita",
-  "Done": "Hecho",
   "Character limit reached": "Límite de caracteres alcanzado",
   "Description": "Descripción",
   "Recommended length: up to 18 words": "Longitud recomendada: hasta 18 palabras",
@@ -435,6 +450,9 @@
   "No Results Found": "No se han encontrado resultados",
   "No More Videos": "No más vídeos",
   "Search by title in JF Library": "Buscar por título en la Biblioteca JF",
+  "Please verify your email": "Verifica tu correo electrónico",
+  "You need to verify your email before you can continue.": "Tienes que verificar tu correo electrónico antes de poder continuar.",
+  "Send verification email": "Enviar correo de verificación",
   "Journeys Archived": "Viajes Archivados",
   "Journeys Trashed": "Viajes destrozados",
   "No journeys to display.": "No hay viajes que mostrar.",
@@ -512,6 +530,9 @@
   "0 min": "0 min",
   "sec": "sec",
   "min": "min",
+  "Change Language": "Cambiar idioma",
+  "Revert": "Revertir",
+  "Are you sure you want to change language?": "¿Estás seguro de que quieres cambiar de idioma?",
   "Reports": "Informes",
   "See all": "Ver todo",
   "Help us serve you better": "Ayúdanos a servirte mejor",
@@ -531,7 +552,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "Debes obtener permiso del usuario antes de suplantar su identidad. El acceso no autorizado a los datos de un usuario puede ser ilegal y estar penado por la ley en algunas jurisdicciones.",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Las sesiones de suplantación duran una hora. Sin embargo, debes salir de su cuenta lo antes posible.",
   "User Email Address": "Dirección de correo electrónico del usuario",
-  "Logout": "Cerrar sesión",
   "Logout successful": "Cierre de sesión correcto",
   "New Editing Request": "Nueva solicitud de edición",
   "New Journey": "Nuevo viaje",
@@ -584,7 +604,7 @@
   "Change Team Name": "Cambiar el nombre del equipo",
   "Save": "Guarda",
   "Only a manager can invite new members to the team": "Sólo un manager puede invitar a nuevos miembros al equipo",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Sin notificaciones por correo electrónico. Los nuevos miembros obtienen acceso al instante. Los miembros del equipo pueden ver todos los análisis, editar cualquier trayecto y borrar y copiar trayectos.",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Los nuevos miembros obtienen acceso instantáneamente. Los miembros del equipo pueden ver todos los análisis, editar cualquier trayecto y borrar y copiar trayectos.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Plantillas de viaje</0><1>en</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "Temas, vacaciones, necesidades sentidas, colectas",
   "Audience": "Audiencia",
