chore: new translations apps-journeys-admin.json Indonesian

--- a/libs/locales/id-ID/apps-journeys-admin.json
+++ b/libs/locales/id-ID/apps-journeys-admin.json
@@ -1,6 +1,12 @@
 {
   "%s | Next Steps": "%s | Langkah Selanjutnya",
   "Admin | Next Steps": "Admin | Langkah Selanjutnya",
+  "Email Preferences Updated.": "Preferensi Email Diperbarui.",
+  "Email Preferences": "Preferensi Email",
+  "Select the types of email notifications you want to receive from NextSteps.": "Pilih jenis pemberitahuan email yang ingin Anda terima dari NextSteps.",
+  "Account Notifications": "Pemberitahuan Akun",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Pembaruan email tentang anggota baru ke tim Anda, diundang ke tim, perjalanan yang dibagikan kepada Anda, permintaan akses perjalanan, dan dihapus dari tim.",
+  "Done": "Selesai.",
   "Journeys": "Perjalanan",
   "Create a New Journey": "Buat Perjalanan Baru",
   "Request Access": "Minta Akses",
@@ -26,6 +32,17 @@
   "Sign In": "Masuk",
   "Terms and Conditions": "Syarat dan Ketentuan",
   "A question about the terms and conditions form": "Pertanyaan tentang formulir syarat dan ketentuan",
+  "Required": "Diperlukan",
+  "Validate NextStep Email": "Validasi Email Langkah Berikutnya",
+  "Verify Your Email": "Verifikasi Email Anda",
+  "To start making NextSteps journeys": "Untuk mulai melakukan perjalanan NextSteps",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email telah dikirim ke alamat ini dengan tautan untuk memverifikasi akun Anda. Jika Anda belum menerima email setelah beberapa menit, periksa folder spam Anda.",
+  "Resend Validation Email": "Kirim Ulang Email Validasi",
+  "Verify With Code Instead": "Verifikasi Dengan Kode Sebagai Gantinya",
+  "Enter verification code from email": "Masukkan kode verifikasi dari email",
+  "Code": "Kode",
+  "Validate Email": "Validasi Email",
+  "Logout": "Keluar",
   "Manage Access": "Mengelola Akses",
   "You can't edit this journey": "Anda tidak dapat mengedit perjalanan ini",
   "Send an access request to the creator of this journey": "Kirim permintaan akses ke pembuat perjalanan ini",
@@ -48,9 +65,8 @@
   "Editor invite link copied": "Tautan undangan editor disalin",
   "Users invited by link will request approval.": "Pengguna yang diundang melalui tautan akan meminta persetujuan.",
   "Please enter a valid email address": "Masukkan alamat email yang valid",
-  "Required": "Diperlukan",
   "This email is already on the list": "Email ini sudah ada dalam daftar",
-  "No email notifications. New users get access instantly.": "Tidak ada pemberitahuan email. Pengguna baru mendapatkan akses secara instan.",
+  "New users get access instantly.": "Pengguna baru mendapatkan akses secara instan.",
   "Approve": "Menyetujui",
   "Promote": "Mempromosikan",
   "Remove": "Menghapus",
@@ -300,7 +316,6 @@
   "Blocks": "Blok",
   "Add": "Menambahkan",
   "Edit": "Sunting",
-  "Done": "Selesai.",
   "Character limit reached": "Batas karakter tercapai",
   "Description": "Deskripsi",
   "Recommended length: up to 18 words": "Panjang yang disarankan: hingga 18 kata",
@@ -435,6 +450,9 @@
   "No Results Found": "Tidak ada hasil yang ditemukan",
   "No More Videos": "Tidak Ada Lagi Video",
   "Search by title in JF Library": "Cari berdasarkan judul di Perpustakaan JF",
+  "Please verify your email": "Harap verifikasi email Anda",
+  "You need to verify your email before you can continue.": "Anda perlu memverifikasi email Anda sebelum melanjutkan.",
+  "Send verification email": "Kirim email verifikasi",
   "Journeys Archived": "Perjalanan Diarsipkan",
   "Journeys Trashed": "Perjalanan yang dibatalkan",
   "No journeys to display.": "Tidak ada perjalanan yang ditampilkan.",
@@ -512,6 +530,9 @@
   "0 min": "0 menit",
   "sec": "detik",
   "min": "min",
+  "Change Language": "Ubah Bahasa",
+  "Revert": "Kembalikan",
+  "Are you sure you want to change language?": "Apakah Anda yakin ingin mengubah bahasa?",
   "Reports": "Laporan",
   "See all": "Lihat semua",
   "Help us serve you better": "Bantu kami melayani Anda dengan lebih baik",
@@ -531,7 +552,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "Anda harus mendapatkan izin dari pengguna sebelum menyamar sebagai mereka. Akses tanpa izin ke data pengguna dapat dianggap ilegal dan dapat dihukum oleh hukum di beberapa wilayah hukum.",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Sesi peniruan berlangsung selama satu jam. Namun, Anda harus keluar dari akun mereka secepatnya.",
   "User Email Address": "Alamat Email Pengguna",
-  "Logout": "Keluar",
   "Logout successful": "Logout berhasil",
   "New Editing Request": "Permintaan Pengeditan Baru",
   "New Journey": "Perjalanan Baru",
@@ -584,7 +604,7 @@
   "Change Team Name": "Ubah Nama Tim",
   "Save": "Simpan",
   "Only a manager can invite new members to the team": "Hanya manajer yang dapat mengundang anggota baru ke dalam tim",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Tidak ada pemberitahuan email. Anggota baru mendapatkan akses secara instan. Anggota tim dapat melihat semua analitik, mengedit perjalanan apa pun, serta menghapus dan menyalin perjalanan.",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "Anggota baru mendapatkan akses secara instan. Anggota tim dapat melihat semua analitik, mengedit perjalanan apa pun, serta menghapus dan menyalin perjalanan.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Templat Perjalanan</0><1>di</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "Topik, liburan, kebutuhan yang dirasakan, koleksi",
   "Audience": "Penonton",
