--- a/libs/locales/bn-BD/apps-journeys-admin.json
+++ b/libs/locales/bn-BD/apps-journeys-admin.json
@@ -1,6 +1,12 @@
 {
   "%s | Next Steps": "%s | Next Steps",
   "Admin | Next Steps": "Admin | Next Steps",
+  "Email Preferences Updated.": "Email Preferences Updated.",
+  "Email Preferences": "Email Preferences",
+  "Select the types of email notifications you want to receive from NextSteps.": "Select the types of email notifications you want to receive from NextSteps.",
+  "Account Notifications": "Account Notifications",
+  "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.": "Email updates about new members to your teams, invited to a team, journey shared with you, journey access requests, and removed from a team.",
+  "Done": "Done",
   "Journeys": "Journeys",
   "Create a New Journey": "Create a New Journey",
   "Request Access": "Request Access",
@@ -26,6 +32,17 @@
   "Sign In": "Sign In",
   "Terms and Conditions": "Terms and Conditions",
   "A question about the terms and conditions form": "A question about the terms and conditions form",
+  "Required": "Required",
+  "Validate NextStep Email": "Validate NextStep Email",
+  "Verify Your Email": "Verify Your Email",
+  "To start making NextSteps journeys": "To start making NextSteps journeys",
+  "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.",
+  "Resend Validation Email": "Resend Validation Email",
+  "Verify With Code Instead": "Verify With Code Instead",
+  "Enter verification code from email": "Enter verification code from email",
+  "Code": "Code",
+  "Validate Email": "Validate Email",
+  "Logout": "Logout",
   "Manage Access": "Manage Access",
   "You can't edit this journey": "You can't edit this journey",
   "Send an access request to the creator of this journey": "Send an access request to the creator of this journey",
@@ -48,9 +65,8 @@
   "Editor invite link copied": "Editor invite link copied",
   "Users invited by link will request approval.": "Users invited by link will request approval.",
   "Please enter a valid email address": "Please enter a valid email address",
-  "Required": "Required",
   "This email is already on the list": "This email is already on the list",
-  "No email notifications. New users get access instantly.": "No email notifications. New users get access instantly.",
+  "New users get access instantly.": "New users get access instantly.",
   "Approve": "Approve",
   "Promote": "Promote",
   "Remove": "Remove",
@@ -300,7 +316,6 @@
   "Blocks": "Blocks",
   "Add": "Add",
   "Edit": "Edit",
-  "Done": "Done",
   "Character limit reached": "Character limit reached",
   "Description": "Description",
   "Recommended length: up to 18 words": "Recommended length: up to 18 words",
@@ -435,6 +450,9 @@
   "No Results Found": "No Results Found",
   "No More Videos": "No More Videos",
   "Search by title in JF Library": "Search by title in JF Library",
+  "Please verify your email": "Please verify your email",
+  "You need to verify your email before you can continue.": "You need to verify your email before you can continue.",
+  "Send verification email": "Send verification email",
   "Journeys Archived": "Journeys Archived",
   "Journeys Trashed": "Journeys Trashed",
   "No journeys to display.": "No journeys to display.",
@@ -512,6 +530,9 @@
   "0 min": "0 min",
   "sec": "sec",
   "min": "min",
+  "Change Language": "Change Language",
+  "Revert": "Revert",
+  "Are you sure you want to change language?": "Are you sure you want to change language?",
   "Reports": "Reports",
   "See all": "See all",
   "Help us serve you better": "Help us serve you better",
@@ -531,7 +552,6 @@
   "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.": "You must get permission from the user before impersonating them. Unauthorized access to a user's data may be illegal and punishable by law in some juristictions.",
   "Impersonation sessions last one hour. However, you should sign out from their account ASAP.": "Impersonation sessions last one hour. However, you should sign out from their account ASAP.",
   "User Email Address": "User Email Address",
-  "Logout": "Logout",
   "Logout successful": "Logout successful",
   "New Editing Request": "New Editing Request",
   "New Journey": "New Journey",
@@ -584,7 +604,7 @@
   "Change Team Name": "Change Team Name",
   "Save": "Save",
   "Only a manager can invite new members to the team": "Only a manager can invite new members to the team",
-  "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "No email notifications. New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.",
+  "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.": "New members get access instantly. Team members can see all analytics, edit any journey, and delete and copy journey.",
   "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}} {{secondLanguage}}</2>": "<0>Journey Templates</0><1>in</1><2>{{firstLanguage}}, {{secondLanguage}}</2>",
   "Topics, holidays, felt needs, collections": "Topics, holidays, felt needs, collections",
   "Audience": "Audience",
