fix: update translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -563,8 +563,8 @@
   "You need to be a publisher to view this template.": "You need to be a publisher to view this template.",
   "Back to the Admin Panel": "Back to the Admin Panel",
   "You already have an account": "You already have an account",
-  "You've already used ": "You've already used ",
-  " Sign in with {{service}} to continue": " Sign in with {{service}} to continue",
+  "You've already used {{ userEmail }}.": "You've already used {{ userEmail }}.",
+  "Sign in with {{service}} to continue": "Sign in with {{service}} to continue",
   "Please enter your email address": "Please enter your email address",
   "Log in or Sign up": "Log in or Sign up",
   "No account? We'll create one for you automatically.": "No account? We'll create one for you automatically.",
@@ -590,8 +590,7 @@
   "Choose password": "Choose password",
   "Sign Up": "Sign Up",
   "Check your email": "Check your email",
-  "Follow the instructions sent to ": "Follow the instructions sent to ",
-  " to recover your password": " to recover your password",
+  "Follow the instructions sent to {{ userEmail }} to recover your password": "Follow the instructions sent to {{ userEmail }} to recover your password",
   "Active": "Active",
   "Archived": "Archived",
   "Strategy": "Strategy",
